# DDImage

./: .gitignore  CMakeCache.txt  CMakeLists.txt  DDImage.py  DDimage  DDimage.hpp  Makefile  README  README.md  cmake_install.cmake  common.cpp  compare.cpp  main.cpp  main.sh  types.cpp
src/: DDimage.hpp  DFolder.hpp  main.cpp  types.cpp
